Added FTP support (pyftplib)

--- a/ArchLinux/PKGBUILD
+++ b/ArchLinux/PKGBUILD
@@ -6,7 +6,7 @@ pkgdesc="A simple gui for help us. "
 arch=('any')
 url="https://github.com/pobfdm/pobhelp.git"
 license=('GPL')
-depends=('python-wxpython' 'python-urllib3' 'x11vnc' 'tigervnc' 'openvpn')
+depends=('python-wxpython' 'python-urllib3' 'x11vnc' 'tigervnc' 'openvpn' 'python-pyftpdlib')
 conflicts=('pobhelp')
 source=(https://github.com/pobfdm/pobhelp/archive/main.zip)
 md5sums=('SKIP') #generate with 'makepkg -g'
